--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset='utf-8' />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="js/index.js"></script>
+    <script src="js/signin.js"></script>
     <meta name="google-signin-client_id" content="975459361176-0lh8jpvfrk8rv9op4ucfd6j0i84p6bop.apps.googleusercontent.com">
     <link rel="icon" href="static/logo.ico">
     <title>Sign in - Plannet</title>
