--- a/frontend/home.html
+++ b/frontend/home.html
@@ -19,7 +19,7 @@
 
     <h1 id="user-heading">Welcome, </h1>
     <input type="text" class="form-control" id="join-code" placeholder="Enter a group code:" style="width: 200px;">
-    <button type="button" class="btn btn-primary" id="join-button">View</button>
+    <button type="button" class="btn btn-primary" id="join-button">Join</button>
     <button type="button" class="btn btn-success" id="create-button">Create</button>
 
     <div class="card" style="width:600px">
