--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,9 @@
     <meta charset='utf-8' />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="js/signin.js"></script>
-    <meta name="google-signin-client_id" content="975459361176-0lh8jpvfrk8rv9op4ucfd6j0i84p6bop.apps.googleusercontent.com">
+    
+    <meta name="google-signin-client_id" content="331697660397-knlnre8o1qb7qmpnds2j07nhsntmdp7e.apps.googleusercontent.com">
+    <!-- Fr localhost<meta name="google-signin-client_id" content="975459361176-0lh8jpvfrk8rv9op4ucfd6j0i84p6bop.apps.googleusercontent.com">-->
     <link rel="icon" href="static/logo.ico">
     <title>Sign in - Plannet</title>
 </head>
