imma just try running it in command
s

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="google-signin-client_id" content="331697660397-knlnre8o1qb7qmpnds2j07nhsntmdp7e.apps.googleusercontent.com">
     <!-- Fr localhost<meta name="google-signin-client_id" content="975459361176-0lh8jpvfrk8rv9op4ucfd6j0i84p6bop.apps.googleusercontent.com">-->
     <link rel="icon" href="static/logo.ico">
-    <title>Sign in - Plannennnnnnnnt</title>
+    <title>Sign in - Plannet</title>
 </head>
 <html>
 <body>
