--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
    html, body{
         height: 100%;
         background-repeat: no-repeat;
-        background-image: linear-gradient(to bottom right, #0F52BA, #4682B4);
+        background-image: linear-gradient(to bottom right, #00CED1, #00BFFF);
     }
     h1{
         color: white;
