--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset='utf-8' />
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -21,14 +21,14 @@
     h1{
         color: white;
         font-size: 6em;
-        font-family: 'PT Sans', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         text-align: center;
         margin: .25em 0em .25em 0em;
     }
     h2{
         color: gray;
         font-size: 2em;
-        font-family: 'PT Sans', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         text-align: center;
         margin: 0em 0em .25em 0em;
     }
