--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,22 +19,19 @@
         background-image: linear-gradient(to bottom right, #00CED1, #00BFFF);
     }
     h1{
-        color: white;
-        font-size: 6em;
+        color: #FFFFFF;
+        font-size: 8em;
         font-family: 'Montserrat', sans-serif;
-        text-align: center;
-        margin: .25em 0em .25em 0em;
+        margin: .25em 0em .1em 0em;
     }
     h2{
-        color: gray;
+        color:#F4F4F4;
         font-size: 2em;
         font-family: 'Montserrat', sans-serif;
-        text-align: center;
         margin: 0em 0em .25em 0em;
     }
     nav-wrapper{
         background-color: #161616;
-
     }
 </style>
 </head>
@@ -48,10 +45,20 @@
           </ul>
         </div>
     </nav>
-    <h1>Plan it with Plannet!</h1>
-    <h2>A simple and accessible platform for friends to collaboratively plan hangouts.</h2>
-    <div id='map'></div>
-
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div class = "row" style = "margin-top:2em; text-align:center;">
+        <div class = "col s6 offset-s3">
+            <h1>Plan It With PLANNET!</h1>
+        </div>
+    </div>
+    <div class = "row" style = "text-align:center;">
+        <h2>A simple and accessible platform for friends to collaboratively plan hangouts.</h2>
+    </div>
+    <div class = "row">
+        <div class = "col s2 offset-s5">
+            <div class = "card-panel hoverable"  style = "background-color: rgba(0, 0, 0, 0)">
+                <div class="g-signin2" data-onsuccess="onSignIn" style = "margin:0 auto;"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
