im committing before i potentially fuck up the code
please

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
 <body>
     <nav class = "black">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo"><img src = "static/logo.ico"> Plannet</a>
+          <a href="#" class="brand-logo" style = "margin-left:.02em;"><img src = "static/logo.ico"> Plannet</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><div class="g-signin2" data-onsuccess="onSignIn"></div></li>
           </ul>
