--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,9 +41,6 @@
     <nav class = "black">
         <div class="nav-wrapper">
           <a href="#" class="brand-logo" style = "margin-left:.02em;"><img src = "static/logo.ico"> Plannet</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><div class="g-signin2" data-onsuccess="onSignIn"></div></li>
-          </ul>
         </div>
     </nav>
     <div class = "row" style = "margin-top:2em; text-align:center;">
@@ -56,8 +53,7 @@
     </div>
     <div class = "row">
         <div class = "col s2 offset-s5">
-            <div class = "card-panel hoverable"  style = "background-color: rgba(0, 0, 0, 0)">
-                <div class="g-signin2" data-onsuccess="onSignIn" style = "margin:0 auto;"></div>
+            <div class = "card-panel hoverable g-signin2" data-onsuccess="onSignIn" style = "background-color: rgba(0, 0, 0, 0)">
             </div>
         </div>
     </div>
